tests/paczka1/fuzzy1/94239593.err
Error in line 3: A52 A52 78,3
Error in line 5: ZecvP S620 77,5
Error in line 26: ZecvP S764 43,9
Error in line 23: 42NgNQP S620 87,3
Error in line 33: 42NgNQP A52 59,2
Error in line 30: ZecvP S620 39,3
